trunk/Archive2/08/94185a574f6258/output
main.cpp:10:11: error: cannot initialize a variable of type 'flags' (aka 'stuff::type') with an rvalue of type 'int'
    flags x = flags::a | flags::b;
          ^   ~~~~~~~~~~~~~~~~~~~
1 error generated.
